<resources>
    <string name="app_name">VCOIN</string>
    <string name="item_onetran">交易</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="item_market">行情</string>
    <string name="item_buy">买入</string>
    <string name="item_home">首页</string>
    <string name="item_seller">卖出</string>
    <string name="item_finance2">资产</string>
    <string name="item_finance">资金</string>
    <string name="item_mine">个人</string>
    <string name="item_finance_cetener">财务中心</string>
    <string name="item_mine_cetener">个人中心</string>
    <string name="back">返回</string>
    <string name="user_hint_login">用户名／手机号／邮箱</string>
    <string name="pwd_hint_login">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="text_forget_pwd">密码错误？</string>
    <string name="text_register">注册</string>
    <string name="register_user">注册用户</string>
    <string name="registerphone">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="get_code">获取验证码</string>
    <string name="send_msg_already">验证码已发送</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pwd">请输入登录密码</string>
    <string name="input_msg_code">请输入验证码</string>
    <string name="input_res_code">推荐码(非必填)</string>
    <string name="input_phone_ok">手机号码错误</string>
    <string name="input_email">请输入您的邮箱</string>
    <string name="register_agreement">我已阅读并同意</string>
    <string name="finance_center">财务中心</string>
    <string name="finance_assets">总资产折合（CNY）</string>
    <string name="finance_other">其他</string>
    <string name="finance_spot_assets">现货资产</string>
    <string name="finance_bank_card">银行卡</string>
    <string name="finance_c2c">C2C交易</string>
    <string name="finance_otc">OTC交易</string>
    <string name="finance_vote">投票上币</string>
    <string name="finance_offering">参与公募</string>
    <string name="mine_safe">安全中心</string>
    <string name="mine_id_confirm">实名认证</string>
    <string name="mine_ustomer">客服中心</string>
    <string name="mine_brief">平台简介</string>
    <string name="mine_language">语言切换</string>
    <string name="mine_agreement">协议声明</string>
    <string name="mine_edition">版本更新</string>
    <string name="mine_huod">近期活动</string>
    <string name="mine_invitation">邀请返佣</string>
    <string name="qrcode_error">二维码错误</string>
    <string name="copyaddress">复制成功</string>
    <string name="plain">1.MT钱包地址禁止充值除MT之外的其他资产，任何非MT资产充值将不可找回。2.充值地址已发生变更，充值前请确认地址。</string>
    <string name="loginpwdset">登录密码设置</string>
    <string name="transa_pwdset">交易密码设置</string>
    <string name="pwdnosume">两次密码不相同 </string>
    <string name="china">中国</string>
    <string name="welcomemt">欢迎使用</string>
    <string name="loginsuccess">登录成功</string>
    <string name="agreetmt">请同意协议</string>
    <string name="second">秒</string>
    <string name="setting_language_auto">跟随系统</string>
    <string name="setting_language_english">English</string>
    <string name="setting_simplified_chinese">简体中文</string>
    <string name="setting_traditional_chinese">繁體中文</string>
    <string name="favorites">自选</string>
    <string name="accountManagement">账号管理</string>
    <string name="loginout">注销登录</string>
    <string name="Confirm">提交</string>
    <string name="address">地址</string>
    <string name="label">标签</string>
    <string name="searchCurrency">搜索币种</string>
    <string name="Change">涨跌幅</string>
    <string name="maxPrice">最高价</string>
    <string name="minPrice">最低价</string>
    <string name="onesecond">1分</string>
    <string name="fifteen">15分</string>
    <string name="onehour">时K</string>
    <string name="oneday">日K</string>
    <string name="oneweek">周K</string>
    <string name="cacelfav">取消自选</string>
    <string name="addfav">添加自选</string>
    <string name="Trade">立即交易</string>
    <string name="Orders">当前委托</string>
    <string name="History">历史委托</string>
    <string name="buy">买</string>
    <string name="seller">卖</string>
    <string name="jiaPrice">限价委托</string>
    <string name="all">全部</string>
    <string name="entrastPrice">委托价</string>
    <string name="transaction">成交价</string>
    <string name="transactionmoney">交易额</string>
    <string name="Available">可用</string>
    <string name="Frozen">冻结</string>
    <string name="onef">1分</string>
    <string name="onefivef">15分</string>
    <string name="threef">30分</string>
    <string name="onehours">1时</string>
    <string name="twohours">2时</string>
    <string name="fourhours">4时</string>
    <string name="fivehours">6时</string>
    <string name="introduce">介绍</string>
    <string name="GOrders">挂单</string>
    <string name="make">成交</string>
    <string name="addbankcard">添加银行卡</string>
    <string name="bankname">请输入开户名</string>
    <string name="youname">只可添加本人名下的银行卡</string>
    <string name="selectbankkai">选择开户银行</string>
    <string name="bankaddress">开户银行所在地</string>
    <string name="truebrashbank">请填写正确的开户支行名称</string>
    <string name="bankid">请填写银行卡号，无须空格隔开</string>
    <string name="aiganbankid">请再次输入一次卡号</string>
    <string name="okConfirm">确认添加</string>
    <string name="addwalletaddress">新增付币地址</string>
    <string name="totalAssets">现货折合</string>
    <string name="searchAssets">搜索币种资产</string>
    <string name="yingcang">隐藏小额资产</string>
    <string name="Historybill">账单详情</string>
    <string name="accountbalance">账户余额</string>
    <string name="billtime">账单时间</string>
    <string name="billtype">账单类型</string>
    <string name="oneVerification">个人实名认证</string>
    <string name="Identificationarea">证件地区</string>
    <string name="Idname">证件姓名</string>
    <string name="IDNumber">证件号码</string>
    <string name="entryidname">请输入正确的姓名</string>
    <string name="entryidnumber">请输入正确的身份证号码</string>
    <string name="next">下一步</string>
    <string name="bankcardmanager">银行卡管理</string>
    <string name="bill">账单</string>
    <string name="record">记录</string>
    <string name="ReceivingAddress">接收地址</string>
    <string name="Account">转账数量</string>
    <string name="Turnsaddress">转出地址</string>
    <string name="entryreturnaddress">请选择转出地址</string>
    <string name="entrureturnnumber">请输入数量</string>
    <string name="okconfirm">在申请成功后，尽快向该接受地址转入相等数量的数字币，我们收到后会自动完成确认</string>
    <string name="oksubmit">确认申请</string>
    <string name="mtjieshao">1.%1$s钱包地址禁止充值除%2$s之外的其他资产，任何非%3$s资产充值将不可找回。2.充值地址已发生变更，充值前请确认地址</string>
    <string name="copymyaddress">我的%1$s收款地址，点击复制</string>
    <string name="moneyorder">汇款单</string>
    <string name="Recipientusername">收款方用户名</string>
    <string name="Nameofclient">收款方开户银行</string>
    <string name="Clientname">收款方账号</string>
    <string name="postscript">备注信息</string>
    <string name="transactionmxi">交易明细</string>
    <string name="oksellerbill">确认付币</string>
    <string name="number">数量</string>
    <string name="Fee">矿工费</string>
    <string name="DynamicVerification">动态验证</string>
    <string name="accountsafe">为了您的账户安全，需要完成密码验证</string>
    <string name="transactionpass">交易密码</string>
    <string name="entrytranspwd">请输入交易密码</string>
    <string name="entryDynamicVerification">请输入动态验证码</string>
    <string name="changes">涨幅</string>
    <string name="zuigao">最高</string>
    <string name="low">最低</string>
    <string name="entrylabelname">请输入地址备注名称</string>
    <string name="Retrieveloginpassword">找回登录密码</string>
    <string name="Mobilephoneback">手机找回</string>
    <string name="Emailback">邮箱找回</string>
    <string name="compelect">完成</string>
    <string name="NewPassword">新密码</string>
    <string name="totalcny">折合CNY</string>
    <string name="Quantity">委托数量</string>
    <string name="Totalmoney">交易额</string>
    <string name="EnterNewPassword">请输入新密码</string>
    <string name="entrupwsagain">再次输入新的密码</string>
    <string name="entrypwd">确认密码</string>
    <string name="oksave">确认保存</string>
    <string name="allread">全标已读</string>
    <string name="messagecenter">消息中心</string>
    <string name="Confirmationvote">确认投票</string>
    <string name="onebyone">每一个USDT可投一票，每次可投多个USDT</string>
    <string name="rule">规则</string>
    <string name="Numbervoting">投票数量</string>
    <string name="castnumber">可投票数：</string>
    <string name="Votetotal">投票总计：</string>
    <string name="purchasenotes">购买须知:</string>
    <string name="noteone">1.买卖商户均为实地考察认证商户，并提供100万USDT保证金，您每次兑换会冻结账户财产，商户资产不够时，不能接单，可放心兑换</string>
    <string name="notetwo">2.买卖商户均为实名认证商户，并提供保证金，可放心兑换</string>
    <string name="Choosecountry">国家/地区</string>
    <string name="selectcontry">请选择国家/地区</string>
    <string name="securitycenter">安全中心</string>
    <string name="selectbank">选择银行</string>
    <string name="historyrecord">历史记录</string>
    <string name="AvailableBalance">可用余额</string>
    <string name="feenodata">矿工费将在可用余额中扣除，余额不足将从转账金额中扣除</string>
    <string name="internaltransfer">内部转账</string>
    <string name="agreetrans">同意内部账号之间的转账不走区块链，0手续费0确认，急速到账</string>
    <string name="entrycardid">请输入您的证件号码（非必填）</string>
    <string name="mdxieyi">我已阅读并同意《VCOIN用户服务协议》</string>
    <string name="cancellations">全部撤单</string>
    <string name="close">关闭</string>
    <string name="Checkdelegate">查看委托</string>
    <string name="replapws">重置密码</string>
    <string name="lijibuy">立即买入</string>
    <string name="buyunmber">买入数量</string>
    <string name="lijiseller">立即卖出</string>
    <string name="sellernumber">卖出数量</string>
    <string name="Deposit">充币</string>
    <string name="Withdrawal">提币</string>
    <string name="payinformation">付款信息</string>
    <string name="projectdetails">项目详情</string>
    <string name="Tovote">去投票</string>
    <string name="sacn">扫一扫</string>
    <string name="nobilldata">亲，您还没有账单记录</string>
    <string name="nocoin">没有您要找的币种</string>
    <string name="nohistory">亲，您还没有历史记录</string>
    <string name="nodata">您还没有委托的订单数据</string>
    <string name="alltotal">折合</string>
    <string name="chong">充</string>
    <string name="apply">申请</string>
    <string name="money">数量：</string>
    <string name="selectadd">请选择地址</string>
    <string name="entrymoney">请输入金额</string>
    <string name="confirmsubmit">确认提交充币申请？</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="scancode">扫码二维码</string>
    <string name="clipboard">从剪切板粘贴</string>
    <string name="shou">收</string>
    <string name="fu">付</string>
    <string name="buycoinadd">付币地址</string>
    <string name="selectaddress">选择地址</string>
    <string name="Paymoneyrecord">付币记录-</string>
    <string name="Chargemoneyrecord">充币记录-</string>
    <string name="paymentaddress">付币地址管理 -</string>
    <string name="entryvoteprice">请输入委托价格</string>
    <string name="entryvotenumber">请输入委托数量</string>
    <string name="beankcardisnosame">两次输入的银行卡号不一致</string>
    <string name="depositcard">储蓄卡</string>
    <string name="warmprompt">温馨提示</string>
    <string name="suredeletecard">确定要删除此银行卡？</string>
    <string name="sure">确定</string>
    <string name="registsuccess">注册成功</string>
    <string name="detailedaddress">详细地址</string>
    <string name="entrydetaladd">请输入您的详细地址</string>
    <string name="sbmitsuccess">提交成功</string>
    <string name="lookrecord">查看记录</string>
    <string name="gohome">返回首页</string>
    <string name="entryaddress">请输入您常用的提币地址</string>
    <string name="ususer">用于提示这个第一的用途</string>
    <string name="dynamicverificationcode">获取动态验证码并输入</string>
    <string name="entrytranspw" >请输入您的交易密码</string>
    <string name="Selectopeningbank">选择开户银行</string>
    <string name="accountname">请输入开户名</string>
    <string name="delete">删除</string>
    <string name="Bankcardcollection">银行卡收款</string>
    <string name="depositbank">开户银行</string>
    <string name="accountnames">账户名</string>
    <string name="account">账号</string>
    <string name="Confirma">确认账号</string>
    <string name="modification">修改</string>
    <string name="QRcode">收款码</string>
    <string name="UploadWeChatcode">上传微信收款码</string>
    <string name="WeChatcollection">微信收款</string>
    <string name="branchinformation">请输入支行信息</string>
    <string name="branch">支行名称</string>
</resources>